--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@ionic/react": "^8.7.13",
     "@ionic/react-router": "^8.7.13",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "idb": "^8.0.3",
     "ionicons": "^8.0.13",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
